add home button

--- a/templates/module_details.html
+++ b/templates/module_details.html
@@ -10,6 +10,7 @@
     <nav>
         <h1>Module Details</h1>
         <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/module-details">Module Details</a></li>
         </ul>
     </nav>
