--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <nav>
         <h1>Software Quality Assurance Practice</h1>
         <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/module-details">Module Details</a></li>
         </ul>
     </nav>
