--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,10 @@
         <h1>Software Quality Assurance Practice</h1>
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/register">Register</a></li>
             <li><a href="/module-details">Module Details</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
     <main>
