--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
         <section>
-            <h2>Welcome to the SQA Practice Application</h2>
+            <h2>Welcome to the SQA Practice Application {{ username }}</h2>
             <p>This application is designed to help you practice and improve your skills in Software Quality Assurance.</p>
             <p>Use the navigation above to explore module details and other resources.</p>
         </section>
