--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <h1>Software Quality Assurance Practice</h1>
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
             <li><a href="/module-details">Module Details</a></li>
             <li><a href="/about">About</a></li>
